--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "postbuild": "next-sitemap",
-    "dev": "next dev --turbo",
+    "dev": "next dev ",
     "start": "next start",
     "lint": "eslint . --config eslint.config.cjs --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --config eslint.config.cjs --ext .js,.jsx,.ts,.tsx --fix",
